--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
+    text-decoration: none;
 }
 .img-fondo {
     background-image: url(../image/casa/28.jpg) ;
@@ -425,11 +426,17 @@ footer i{
 
 .colum3{
     max-width: 400px;
+    color: #C7C7C7;
 }
 
 .colum3 h1{
     font-size: 22px;
 }
+
+.colum3 a{
+    color: #C7C7C7;
+}
+
 
 .row2{
     margin-top: 20px;
