--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,7 @@ footer i{
 
 .colum1 h1{
     font-size: 22px;
+    color: #c7c7c7;
 }
 
 .colum1 p{
@@ -432,10 +433,18 @@ footer i{
     font-size: 22px;
 }
 
+.colum3 i{
+    margin-top: 245px;
+    font-size: 20px;
+
+}
+
 .colum3 a{
     color: #C7C7C7;
 }
-
+.colum3 p{
+  font-size: 20px;
+}
 
 .row2{
     margin-top: 20px;
@@ -488,7 +497,7 @@ footer i{
 }
 
 i:hover{
-    color:#4d0686;
+    color:#142F57;
     text-decoration: none;
 }
 
@@ -553,6 +562,68 @@ a:hover{
     transform: scale(1);
 }
 
+/* Galeria 2 */
+
+
+.portafolio2{
+    
+    margin-bottom: 10px;
+}
+
+.galeria-port2{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.imagen-port2{
+    width: 24%;
+    margin-bottom: 40px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.imagen-port2 > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.hover-galeria2{
+    
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    top: 0;
+    transform: scale(0);
+    background: rgba(6, 75, 132, 0.7);
+    transition: transform .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hover-galeria2 img{
+    width: 250px;
+    
+}
+
+.hover-galeria2 p{
+    color: #101010;
+    margin-top: -55px;
+}
+
+.imagen-port2:hover .hover-galeria2{
+    transform: scale(1);
+    
+}
+
+
+
 /* Clients */
 
 .cards{
@@ -608,8 +679,6 @@ a:hover{
     }
 }
 
-
-
 /* Menu */
 
 .menues{
@@ -629,13 +698,14 @@ a:hover{
     width: auto;
     float:right;
     margin-top: 19px;
-    margin-right: 10%;
+    margin-right: -10px;
     
 }
 
 .menu1 ul{
     display: flex;
     margin-top: -70px;
+    margin
 }
 .menu1 li{
     list-style: none;
